arregle el scroll del carrito

--- a/CodigoHTML_PHP/Inventario/Vista/css/estilos.css
+++ b/CodigoHTML_PHP/Inventario/Vista/css/estilos.css
@@ -266,6 +266,7 @@ th, td {
   transition: right 0.3s ease-in-out; 
   padding: 20px;
   box-sizing: border-box;
+  overflow-y: auto;
 }
 /* Cuando está activo, se muestra en la pantalla */
   .menu-carrito.activo {
