--- a/CodigoHTML_PHP/NavBar/Vista/css/estilos.css
+++ b/CodigoHTML_PHP/NavBar/Vista/css/estilos.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
+body {
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f6f8;
+    color: #034C8C;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    user-select: none;
+}
+
 /* NAVBAR */
 .navbar {
     display: flex;
@@ -82,11 +95,11 @@
     width: 250px; 
 }
 
-.close-btn {
+.close-btn1 {
     position: absolute;
     top: 20px;
     right: 25px;
-    font-size: 3em; /* Larger X */
+    font-size: 3em;
     color: #f1f1f1;
     cursor: pointer;
     border: none;
@@ -97,13 +110,11 @@
 .close-btn:hover {
     color: #04BFAD;
 }
-
-/* Links inside the overlay menu */
 .overlay-menu-list {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Align links to the left */
-    padding-left: 30px; /* Indent links */
+    align-items: flex-start; 
+    padding-left: 30px; 
     margin-top: 20px;
 }
 
@@ -114,8 +125,8 @@
     color: #fff;
     display: block;
     transition: 0.3s;
-    width: 100%; /* Make links take full available width */
-    box-sizing: border-box; /* Include padding in width */
+    width: 100%; 
+    box-sizing: border-box;
 }
 
 .overlay-menu-list a:hover {
