Arreglo el item carrito xd

--- a/CodigoHTML_PHP/Inventario/Vista/css/estilos.css
+++ b/CodigoHTML_PHP/Inventario/Vista/css/estilos.css
@@ -167,12 +167,11 @@ button {
 ----------------------------------------------------- */
 /* Icono del carrito */
 .containerCarrito {
-  
   justify-content: flex-end;
   align-items: center;
   padding: 10px 20px;
   position: fixed;
-  top: 10%;
+  top: 5rem;
   right: 0;
   
 }
