--- a/CodigoHTML_PHP/Inicio/Vista/css/estilos.css
+++ b/CodigoHTML_PHP/Inicio/Vista/css/estilos.css
@@ -16,6 +16,15 @@
   max-width: 100%; 
   object-fit: contain; 
   z-index: 1;
+  border-radius: 12px;
+  background-color: #fff;
+  padding: 2px;
+  box-shadow: 0 4px 16px rgba(58, 58, 58, 0.85);
+  transition: transform 0.35s ease, box-shadow 0.35s ease;
+  cursor: pointer;
+}
+.logo2:hover{
+  box-shadow: 0 6px 20px #04BFBF;
 }
 
 .fecha-hora-container {
