--- a/CodigoHTML_PHP/Inventario/Vista/css/estilos.css
+++ b/CodigoHTML_PHP/Inventario/Vista/css/estilos.css
@@ -297,25 +297,38 @@ button:hover {
   ESTILOS MODAL
 ----------------------------------------------------- */
 .modal {
+  display: none; /* Oculto por defecto */
   position: fixed;
-  z-index: 1000;
-  inset: 0; /* reemplaza left, top, width, height */
-  padding-left: 30%;
-  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  
+
+  /* Centrando el contenido */
   justify-content: center;
   align-items: center;
-  background-color: rgba(0,0,0,0.5);
+
+  z-index: 999;
+}
+.modal.abierto {
+  display: block;
+  display: flex; /* al abrirlo se centra */
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-contenido {
   background: #fff;
-  padding: 25px 30px;
-  width: min(90%, 500px);
-  border-radius: 12px;
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  border-radius: 10px;
   position: relative;
-  animation: fadeIn 0.3s ease-out;
+  min-width: 300px;
+  max-width: 500px;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.3);
 }
+
 
 .cerrar {
   position: absolute;
@@ -348,7 +361,7 @@ button:hover {
 
 .modal-contenido input,
 .modal-contenido select {
-  width: 100%;
+  width: 80%;
   padding: 10px 12px;
   border: 1px solid #ccc;
   border-radius: 6px;
