--- a/CodigoHTML_PHP/Inventario/Vista/css/estilos.css
+++ b/CodigoHTML_PHP/Inventario/Vista/css/estilos.css
@@ -1,5 +1,5 @@
 /* ----------------------------------------------------
-  TÍTULO "INVENTARIO"
+  TÍTULO
 ----------------------------------------------------- */
 h1 {
   text-align: center;
@@ -15,7 +15,13 @@ h1 {
   text-shadow: 0 2px 6px rgba(3, 90, 166, 0.3);
   cursor: default;
 }
-
+h3{
+  background: linear-gradient(135deg, #04BFAD, #035AA6);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-shadow: 0 2px 6px rgba(3, 90, 166, 0.3);
+}
 /* ----------------------------------------------------
   BUSCADOR
 ----------------------------------------------------- */
@@ -148,6 +154,8 @@ button {
   transition: all 0.4s ease;
   box-shadow: 0 6px 20px rgba(3, 90, 166, 0.15);
   user-select: none;
+  text-align: center;
+  margin-left: 2px;
 }
 
 button:hover {
@@ -156,15 +164,10 @@ button:hover {
   filter: brightness(1.1);
 }
 
-/* Contenedor de botones */
-.botones {
-  text-align: center;
-  margin-bottom: 50px;
-}
 
-.botones button {
-  margin: 0 16px;
-}
+
+
+
 
 /* ----------------------------------------------------
   CARRITO DE COMPRAS
@@ -304,17 +307,14 @@ button:hover {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  
-
-  /* Centrando el contenido */
   justify-content: center;
   align-items: center;
-
   z-index: 999;
 }
+
 .modal.abierto {
   display: block;
-  display: flex; /* al abrirlo se centra */
+  display: flex; 
   justify-content: center;
   align-items: center;
 }
@@ -328,7 +328,6 @@ button:hover {
   max-width: 500px;
   box-shadow: 0 5px 20px rgba(0,0,0,0.3);
 }
-
 
 .cerrar {
   position: absolute;
@@ -346,9 +345,8 @@ button:hover {
 }
 
 .modal-contenido h2 {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-size: 20px;
-  color: #333;
   text-align: center;
 }
 
@@ -356,7 +354,6 @@ button:hover {
   display: block;
   margin: 10px 0 5px;
   font-weight: 500;
-  color: #555;
 }
 
 .modal-contenido input,
@@ -367,34 +364,17 @@ button:hover {
   border-radius: 6px;
   font-size: 14px;
   transition: border-color 0.2s, box-shadow 0.2s;
+   margin-bottom: 15px;
 }
 
 .modal-contenido input:focus,
 .modal-contenido select:focus {
-  border-color: #007bff;
+  border-color: #04BFAD;
   outline: none;
   box-shadow: 0 0 4px rgba(0, 123, 255, 0.3);
 }
 
-.botones {
-  margin-top: 20px;
-  text-align: center;
-}
 
-.botones button {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  padding: 10px 18px;
-  font-size: 15px;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
-
-.botones button:hover {
-  background-color: #0056b3;
-}
 
 /* Animación */
 @keyframes fadeIn {
