--- a/AngularP/src/app/app.html
+++ b/AngularP/src/app/app.html
@@ -1,1 +1,8 @@
+<app-historial-produto></app-historial-produto>
+<app-inventario></app-inventario>
+<app-detalle-venta></app-detalle-venta>
+<app-historial-ventas></app-historial-ventas>
+<app-historial-produto></app-historial-produto>
+<app-inicio></app-inicio>
+<app-navbar></app-navbar>
 <router-outlet />
