--- a/AngularP/src/app/historial-produto/historial-produto.html
+++ b/AngularP/src/app/historial-produto/historial-produto.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Historial de Productos</title>
+    <title>Ingresos y Egresos de Productos</title>
 </head>
 <body>
 <div class="contenido">
-    <h1>Historial de Productos</h1>
+    <h1>Ingresos y Egresos de Productos</h1>
     <table>
         <thead>
             <tr>
