arreglando el nombre historialProducto a ingresoEgreso

--- a/AngularP/src/app/app.html
+++ b/AngularP/src/app/app.html
@@ -1,8 +1,8 @@
-<app-historial-produto></app-historial-produto>
+<app-ingreso-egreso></app-ingreso-egreso>
 <app-inventario></app-inventario>
 <app-detalle-venta></app-detalle-venta>
 <app-historial-ventas></app-historial-ventas>
-<app-historial-produto></app-historial-produto>
+<app-ingreso-egreso></app-ingreso-egreso>
 <app-inicio></app-inicio>
 <app-navbar></app-navbar>
 <router-outlet />
