Añadiendo más estilos al Proyecto V2

--- a/Angular/src/app/inicio/inicio.html
+++ b/Angular/src/app/inicio/inicio.html
@@ -1,6 +1,7 @@
-<img src="../assets/logo.jpg" alt="">
 
-LOGO DE LA FARMACIA 
+<div class="logoContainer">
+    <img src="img/logo.png" class="logo2">
+</div>
 <div>
     lunes, 15 de septiembre de 2025 <br>
     21:55:55
