--- a/Angular/src/app/navbar/navbar.html
+++ b/Angular/src/app/navbar/navbar.html
@@ -2,7 +2,8 @@
     
     
     <a href="#" class="navbar-logo">
-        <span>Farmacia Oasis</span>
+        
+        <img src="img/logo.png" class="logo">
     </a>
     <div class="navbar-palanca" (click)="switchMenu()">
         <span>☰</span>
