--- a/Angular/src/app/inventario/inventario.html
+++ b/Angular/src/app/inventario/inventario.html
@@ -1,3 +1,4 @@
+
 <title>Inventario</title>
 <div>
     
@@ -6,12 +7,13 @@
 
 <h1>INVENTARIO</h1>
 
-<div>
-    <input type="text" placeholder="¿Qué estás buscando?" id="busqueda">
+<div class="busqueda-container">
+    <input class="busqueda" type="text" placeholder="¿Qué estás buscando?" />
     <button>Buscar</button>
+    
 </div>
 
-<table border="1">
+<table>
     <thead>
         <tr>
             <th>CÓDIGO</th>
